<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/no_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toStartOf="@+id/signup_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/login_button" />

    <TextView
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/signup_now"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_text"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signup_text"
        app:layout_constraintTop_toTopOf="@+id/signup_text" />

    <ImageView
        android:id="@+id/lifecare_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="@+id/email_field"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lifecarelogo" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:fontFamily="@font/montserratlight"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:fontFamily="@font/montserratlight"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotten_password"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="@+id/email_field"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgotten_password"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/facebook_login"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="@+id/email_field" />

    <ImageButton
        android:id="@+id/facebook_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/facebookbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/google_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/login_button" />

    <ImageButton
        android:id="@+id/google_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/googlebutton"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_login"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebook_login"
        app:layout_constraintTop_toTopOf="@+id/facebook_login" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_real_login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_login"
        app:layout_constraintEnd_toStartOf="@+id/facebook_logo"
        app:layout_constraintStart_toStartOf="@+id/facebook_login"
        app:layout_constraintTop_toTopOf="@+id/facebook_login" />

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_login"
        app:layout_constraintStart_toStartOf="@+id/facebook_login"
        app:layout_constraintTop_toTopOf="@+id/facebook_login"
        app:srcCompat="@drawable/facebooklogo" />

    <ImageView
        android:id="@+id/google_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/google_login"
        app:layout_constraintStart_toStartOf="@+id/google_login"
        app:layout_constraintTop_toTopOf="@+id/google_login"
        app:srcCompat="@drawable/googlelogo" />

    <TextView
        android:id="@+id/facebook_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/login_with_face"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_login"
        app:layout_constraintEnd_toEndOf="@+id/facebook_login"
        app:layout_constraintStart_toEndOf="@+id/facebook_logo"
        app:layout_constraintTop_toTopOf="@+id/facebook_login" />

    <TextView
        android:id="@+id/google_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/login_with_google"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/google_login"
        app:layout_constraintEnd_toEndOf="@+id/google_login"
        app:layout_constraintStart_toEndOf="@+id/google_logo"
        app:layout_constraintTop_toTopOf="@+id/google_login" />

</androidx.constraintlayout.widget.ConstraintLayout>